[package]
name = "tproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.32", default-features = false, features = ["std", "derive", "help", "usage"] }
ctrlc = "3.2"
libbpf-rs = "0.21"
nix = { version = "0.26", default-features = false, features = ["net", "user"] }

[build-dependencies]
libbpf-cargo = "0.21"